16. Bad Request 응답

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=prod
 
 
-#??? ??? ?? ??
-spring.jackson.deserialization.fail-on-properties=true
+#JSON의 없는 속성 무시하기
+#spring.jackson.deserialization.fail-on-properties=true
 
