--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/pl.pragmatists/JUnitParams -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>5.9.2</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
