REST API 에서 한글깨짐으로 인한 UTF-8 세팅

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.hikari.leakDetectionThreshold=300000
 #spring.datasource.username=sa
 #spring.datasource.password=
 
+# REST API 에서 한글깨짐으로 인한 UTF-8 세팅
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
