--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.profiles.active=prod
 #JSON의 없는 속성 무시하기
 #spring.jackson.deserialization.fail-on-properties=true
 
+
+# REST API 에서 한글깨짐으로 인한 UTF-8 세팅
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
