26. 테스트용  DB와 설정 분리하기

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,9 +13,15 @@ spring.devtools.restart.enabled=true
 
 #Datasource Configuration
 spring.datasource.platform=postgres
-spring.datasource.url= jdbc:postgresql://localhost:5432/springdata
-spring.datasource.username=keesun
+#spring.datasource.url= jdbc:postgresql://localhost:5432/springdata
+#spring.datasource.username=keesun
+#spring.datasource.password=pass
+
+
+spring.datasource.username=postgres
 spring.datasource.password=pass
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 spring.jpa.hibernate.ddl-auto=create
