--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,12 +17,14 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-#logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
