36. 스프링 시큐리티 폼 인증설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.profiles.active=prod
 # REST API 에서 한글깨짐으로 인한 UTF-8 세팅
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+
+logging.level.org.springframework.security=DEBUG
