--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.profiles.active=prod
 
 # REST API 에서 한글깨짐으로 인한 UTF-8 세팅
 server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.force=true
-
 logging.level.org.springframework.security=DEBUG
+
+
+my-app.adminUsername="admin"
+my-app.adminPassword="admin"
+my-app.userUsername="user"
+my-app.userPassword="user"
+my-app.clientId="clientId"
+my-app.clientSecret="clientSecret"
+
