--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,15 @@
-spring.datasource.username=sa
+#spring.datasource.driver-class-name=org.h2.Driver
+##spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#
+#
+#spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
+#jdbc:h2:~/querydsl (최소 한번)
+#~/querydsl.mv.db 파일 생성 확인
+#이후 부터는 jdbc:h2:tcp://localhost/~/querydsl 이렇게 접속
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/querydsl
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
